--- a/index.html
+++ b/index.html
@@ -530,6 +530,9 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <p>© 2025 Expense Tracker</p>
+        </footer>
     </div>
 
     <!-- Edit Modal -->
@@ -565,6 +568,7 @@
                 </div>
             </form>
         </div>
+
     </div>
 
     <script src="script.js">
